<resources>
    <string name="app_name">Spinner</string>
    <string name="program_exit">Программа завершена</string>
    <string name="are_your_sure">Вы действительно хотите удалить этого сотрудника?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_name">Подбор персонала</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выход</string>
</resources>